# TQP-Inmem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Setup.md  Tasks.md  config.json  constants.py  conversion.py  dashboard-main.py  expression.py  hip.cc  install_spark.sh  main.py  parsing.py  pyproject.toml  requirements-rocm.txt  requirements.txt  script.sh  setup.py  test.py  test_main.py  variable.py  vortex.cc
IO/: CMakeLists.txt  IOMode.py  cache_manager.py  pinned_mem.py  vortex.py  vortex_pipeline.py  zero_copy_reader.cu  zero_copy_reader.hip
TQPlib/tqpmemory/: __init__.py
TQPlib/zero_copy_reader/: __init__.py
cmake/: CrossTorchGPU.cmake
experiments/: datasize_analysis.py  draw-1b.py  draw-2.py  experiment-1.py  experiment-2.py  experiment-breakdown.py  experiment-runtimecomp.py  json_analysis.ipynb  parse_log.py  runtime_analysis.py  working_set_size.py
experiments/experiment_mb/: deadlock_code.py  draw_plot.py  generate_tensors.py  get_PCIE_perf.py  get_perf.py  get_sort_perf.py  zero_copy_test.py
memory/: CMakeLists.txt  bindings.cpp  cuda_memory_allocator.cc
operators/: aggregate.py  filter.py  hashjoin.py  like.py  output.py  project.py  scan.py  sort.py  sortjoin.py
queries/: plan-q1.txt  plan-q10.txt  plan-q11.txt  plan-q12.txt  plan-q13.txt  plan-q14.txt  plan-q15.txt  plan-q16.txt  plan-q17.txt  plan-q18.txt  plan-q19.txt  plan-q2.txt  plan-q20.txt  plan-q21.txt  plan-q22.txt  plan-q3.txt  plan-q4.txt  plan-q5.txt  plan-q6.txt  plan-q7.txt  plan-q8.txt  plan-q9.txt  schema.json  tpch-q1.sql  tpch-q10.sql  tpch-q11.sql  tpch-q12.sql  tpch-q13.sql  tpch-q14.sql  tpch-q15.sql  tpch-q16.sql  tpch-q17.sql  tpch-q18.sql  tpch-q19.sql  tpch-q2.sql  tpch-q20.sql  tpch-q21.sql  tpch-q22.sql  tpch-q3.sql  tpch-q4.sql  (+5 more)
queries/pickles/: planobj-q1.pkl  planobj-q10.pkl  planobj-q11.pkl  planobj-q12.pkl  planobj-q13.pkl  planobj-q14.pkl  planobj-q15.pkl  planobj-q16.pkl  planobj-q17.pkl  planobj-q18.pkl  planobj-q19.pkl  planobj-q2.pkl  planobj-q20.pkl  planobj-q21.pkl  planobj-q22.pkl  planobj-q3.pkl  planobj-q4.pkl  planobj-q5.pkl  planobj-q6.pkl  planobj-q7.pkl  planobj-q8.pkl  planobj-q9.pkl
queries/pickles/original_pickles/: planobj-q1.pkl  planobj-q10.pkl  planobj-q11.pkl  planobj-q12.pkl  planobj-q13.pkl  planobj-q14.pkl  planobj-q15.pkl  planobj-q16.pkl  planobj-q17.pkl  planobj-q18.pkl  planobj-q19.pkl  planobj-q2.pkl  planobj-q20.pkl  planobj-q21.pkl  planobj-q22.pkl  planobj-q3.pkl  planobj-q4.pkl  planobj-q5.pkl  planobj-q6.pkl  planobj-q7.pkl  planobj-q8.pkl  planobj-q9.pkl
tests/: README.md  test_custom_malloc.py  test_debug_agg.py  test_debug_sort.py  test_ooc_filter.py  test_ooc_join.py  test_operators.py  test_tensor_utils.py  test_torch.py  test_vortex.py  test_vortex_2D.py  test_vortex_perf.py
tests/joins/: compare_duckdb_tqp_filter_selectivity.py  compare_duckdb_tqp_join.py  compare_duckdb_tqp_join_fix_R.py  test_duckdb_filter.py  test_duckdb_join.py  test_duckdb_join_fix_R.py  test_handwritten_filter.py  test_new_join.py  test_ooc_filter.py  test_ooc_join.py  test_ooc_join_fix_R.py  test_sort_perf.py
tests/nounique/: draw_new_impl.py  draw_num_of_columns.py  test_new_impl.py  test_num_of_columns.py
tests/verification/: SF1_reference.out  SF1_reference_correct.out
utility/: import_utils.py  logger.py  pth-produce.ipynb  pth-produce.py  tensor_utils.py
